<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call Blocker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_contact">Add</string>
    <string name="delete_contact">Delete</string>
    <string name="edit_contact">Edit</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="cancel">Cancel</string>
    <string name="type_text">Select Type</string>
    <string name="type_num">Number</string>
    <string name="type_regex">Regex</string>
    <string name="no_contact">Nothing Added</string>
    <string name="loading">Loading Contacts&#8230;</string>
    <string name="settings">Settings</string>
    <string name="say_name">Say Caller Name</string>
    <string name="save">Save</string>
    <string name="say_sms">Read Incoming SMS</string>
    <string name="pick_from_contacts">From Contacts</string>
    <string name="pick_from_log">From Log</string>
    <string name="do_shake">Answer by shake</string>

</resources>